# z0mb1

./: .anjuta_sym_db.db  .buildconfig  .gitignore  README.md  default_bus_layout.tres  export_presets.cfg  meson.build  project.godot  src.tar
gdnlib/: bullet.gdnlib  enemy.gdnlib  entity.gdnlib  gun.gdnlib  level.gdnlib  player.gdnlib  shell.gdnlib  solder.gdnlib
levels/: intro.tscn
levels/intro/: intro.tscn  truck.tscn
levels/intro/objects/: truck.tscn
locales/: en.mo  en.po  ru.mo  ru.po  template.pot
resources/materials/: blur_shader.tres
resources/themes/: game_menu.tres  game_menu_cursor.tres  game_menu_panel.tres
scenes/: gui.tscn  player.tscn  sprite.tscn
scenes/enemy/: jetpacker.tscn  solder.gdns  solder.tscn  yellow_eyes.tscn
scenes/enemy/bullets/: enemy_pistol_bullet.tscn
scenes/enemy/effects/: blood1.tscn
scenes/enemy/markers/: change_direction.tscn
scenes/entities/: ak47_entity.tscn  bazooka_entity.tscn  canon_entity.tscn  minigun_entity.tscn  pistol_entity.tscn  r8_entity.tscn  shotgun_entity.tscn
scenes/guns/: ak47.tscn  bazooka.tscn  canon.tscn  minigun.tscn  pistol.tscn  r8.tscn  shotgun.tscn
scenes/guns/bullets/: ak47_bullet.tscn  bazooka_rocket.tscn  canon_fireball.tscn  fireball.tscn  minigun_bullet.tscn  pistol_bullet.tscn  shotgun_pellet.tscn
scenes/guns/entities/: ak47_entity.tscn  bazooka_entity.tscn  minigun_entity.tscn  pistol_entity.tscn  shotgun_entity.tscn
scenes/guns/shells/: ak47_shell.tscn  minigun_shell.tscn  pistol_shell.tscn  shotgun_shell.tscn
scenes/main/: game_menu.tscn  main.tscn  quit_confirm.tscn  scene_switch.tscn  settings.tscn  settings_menu.tscn  sound_settings.tscn
scenes/player/: henry.tscn
scripts/: constants.gd  global.gd  gui.gd  input.gd  save.gd  settings.gd
scripts/enemy/: base_enemy.gd  jetpacker.gd  solder.gd  solder_anim.gd  yellow_eyes.gd
scripts/enemy/bullets/: base.gd  pistol_bullet.gd
scripts/enemy/effects/: blood1.gd
scripts/enemy/markers/: change_direction.gd
scripts/entities/: ak47_entity.gd  base.gd  bazooka_entity.gd  canon_entity.gd  minigun_entity.gd  pistol_entity.gd  r8_entity.gd  shotgun_entity.gd
scripts/guns/: ak47.gd  base.gd  bazooka.gd  canon.gd  minigun.gd  pistol.gd  r8.gd  shotgun.gd
scripts/guns/bullets/: ak47_bullet.gd  base.gd  bazooka_rocket.gd  minigun_bullet.gd  pistol_bullet.gd  shotgun_pellet.gd
scripts/guns/shells/: ak47_shell.gd  base.gd  minigun_shell.gd  pistol_shell.gd
scripts/levels/: base.gd  intro.gd  next_level_area.gd
scripts/levels/intro/: truck.gd
scripts/main/: base_menu.gd  game_menu.gd  main.gd  quit_confirm.gd  scene_switch.gd  settings_menu.gd  sound_settings.gd
scripts/player/: aim.gd  animation.gd  audio.gd  camera.gd  movement.gd  player.gd
scripts/utils/: utils.gd
src/: constants.hpp  meson.build
src/enemy/: enemy.cpp  enemy.hpp  meson.build
src/enemy/lib/: bullet.cpp  bullet.hpp  change_direction.cpp  change_direction.hpp  main.cpp  meson.build
src/enemy/solder/: anim.hpp  animation.cpp  animation.hpp  main.cpp  meson.build  solder.cpp  solder.cpp~  solder.hpp
src/entities/: gun_entity.cpp  gun_entity.hpp  main.cpp  meson.build
src/guns/: ak47.cpp  ak47.hpp  bazooka.cpp  bazooka.hpp  gun.cpp  gun.hpp  main.cpp  meson.build  minigun.cpp  minigun.hpp  pistol.cpp  pistol.hpp  shotgun.cpp  shotgun.hpp
src/guns/bullets/: ak47_bullet.cpp  ak47_bullet.hpp  bazooka_rocket.cpp  bazooka_rocket.hpp  bullet.cpp  bullet.hpp  main.cpp  meson.build  minigun_bullet.cpp  minigun_bullet.hpp  pistol_bullet.cpp  pistol_bullet.hpp  shotgun_pellet.cpp  shotgun_pellet.hpp
src/guns/shells/: main.cpp  meson.build  shell.cpp  shell.hpp
src/levels/: level.cpp  level.hpp  main.cpp  meson.build
src/levels/intro/: intro.cpp  intro.hpp  meson.build
src/levels/objects/: meson.build  truck.cpp  truck.hpp
src/player/: animation.cpp  animation.hpp  audio.cpp  camera.cpp  camera.hpp  input.cpp  meson.build  movement.cpp  player.cpp  player.hpp
src/utils/: meson.build  utils.cpp  utils.hpp
textures/guns/r8/: main.png~
textures/levels/intro/: 1.png~  1_road.tres
