subdir('bullets')
subdir('shells')

sources = [
          'gun.cpp',
          'ak47.cpp',
          'bazooka.cpp',
          'minigun.cpp',
          'main.cpp'
]

gun = static_library(
                'gun',
                sources,
                install: false,
                include_directories: inc
)
