subdir('bullets')
subdir('shells')

sources = [
          'gun.cpp',
          'ak47.cpp',
          'bazooka.cpp',
          'minigun.cpp',
          'pistol.cpp',
          'shotgun.cpp',
          'main.cpp'
]

gun_static = static_library(
                'gun',
                sources,
                install: false,
                include_directories: inc
)