sources = [
          'animation.cpp',
          'camera.cpp',
          'audio.cpp',
          'movement.cpp',
          'input.cpp',
          'player.cpp'
]

player = static_library(
                'player',
                sources,
                install: false,
                include_directories: inc
)