sources = [
          'bullet.cpp',
          'ak47_bullet.cpp',
          'bazooka_rocket.cpp',
          'minigun_bullet.cpp',
          'pistol_bullet.cpp',
          'shotgun_pellet.cpp',
          'main.cpp'
]

bullet = shared_library(
                'bullet',
                sources,
                install: true,
                include_directories: inc,
                install_dir: target_dir
)
