sources = [
          'bullet.cpp',
          'ak47_bullet.cpp',
          'bazooka_rocket.cpp',
          'minigun_bullet.cpp',
          'pistol_bullet.cpp',
          'shotgun_pellet.cpp'
]

bullet = static_library(
                'bullet',
                sources,
                install: false,
                include_directories: inc
)
